# internal/pb/api/forum/forum.pb.gw.go
@@ -583,6 +583,24 @@ func local_request_Forum_GetComments_0(ctx context.Context, marshaler runtime.Ma
 
 }
 
+func request_Forum_Truncate_0(ctx context.Context, marshaler runtime.Marshaler, client ForumClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq TruncateRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.Truncate(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_Forum_Truncate_0(ctx context.Context, marshaler runtime.Marshaler, server ForumServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq TruncateRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.Truncate(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterForumHandlerServer registers the http handlers for service Forum to "mux".
 // UnaryRPC     :call ForumServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -816,6 +834,29 @@ func RegisterForumHandlerServer(ctx context.Context, mux *runtime.ServeMux, serv
 		}
 
 		forward_Forum_GetComments_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_Forum_Truncate_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/forum.Forum/Truncate", runtime.WithHTTPPathPattern("/forum/truncate"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_Forum_Truncate_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Forum_Truncate_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -1060,6 +1101,26 @@ func RegisterForumHandlerClient(ctx context.Context, mux *runtime.ServeMux, clie
 
 	})
 
+	mux.Handle("POST", pattern_Forum_Truncate_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/forum.Forum/Truncate", runtime.WithHTTPPathPattern("/forum/truncate"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_Forum_Truncate_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Forum_Truncate_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -1083,6 +1144,8 @@ var (
 	pattern_Forum_GetPosts_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"forum", "post", "list"}, ""))
 
 	pattern_Forum_GetComments_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 2, 4}, []string{"forum", "post", "post_id", "comment", "list"}, ""))
+
+	pattern_Forum_Truncate_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"forum", "truncate"}, ""))
 )
 
 var (
@@ -1105,4 +1168,6 @@ var (
 	forward_Forum_GetPosts_0 = runtime.ForwardResponseMessage
 
 	forward_Forum_GetComments_0 = runtime.ForwardResponseMessage
+
+	forward_Forum_Truncate_0 = runtime.ForwardResponseMessage
 )
